fix(combo-box): patch for z-index conflict

--- a/crt_portal/static/sass/custom/combo-box.scss
+++ b/crt_portal/static/sass/custom/combo-box.scss
@@ -1,3 +1,9 @@
+.usa-combo-box {
+  // Create a new stacking context to hold generated combo box elements
+  // that have its own z-index
+  z-index: 1;
+}
+
 .usa-combo-box input {
   border-radius: 3px;
 }
